1.  Increase width of icon side bar (+4px) and the side panel (+20px). This will hopefully address the bookmark variants wrapping described in https://github.com/tonydisera/gene.iobio/issues/276. 2.  Make small styling changes to sidebar panels to adopt more consistent style across the different panels.

--- a/assets/css/sass/_datasource.sass
+++ b/assets/css/sass/_datasource.sass
@@ -78,5 +78,6 @@
 
 #data-card
   .form-group.form-group-sm 
-    margin-top: 4px
+    margin-top: 0px
+    padding-bottom: 0px
 
