--- a/assets/css/sass/_genes.sass
+++ b/assets/css/sass/_genes.sass
@@ -16,6 +16,10 @@
       fill: $sidebar-text-color !important
       font-size: 11px
 
+#genes-card
+  .phenolyzer-label
+    color: $sidebar-text-color !important
+
 
 
 
