--- a/assets/css/sass/site.sass
+++ b/assets/css/sass/site.sass
@@ -10,6 +10,18 @@ h4
   margin-bottom: 4px
   margin-top: 10px
 
+
+h5
+  font-size: 11px
+  color: $app-color
+  margin-bottom: 4px
+  margin-top: 10px
+
+.modal-title
+  font-size: 16px
+  color:  $app-color
+
+
 .form-control,
 .form-group .form-control 
   background-image: -webkit-gradient(linear, left top, left bottom, from($current-color), to($current-color)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2))
@@ -602,7 +614,6 @@ a
 
 #nav-section
   position: fixed
-  left: 30px
   z-index: 2
   right: 5px
   background-color: white
@@ -641,7 +652,6 @@ section
 #container
   margin-top: 0px
   margin-bottom: 10px
-  margin-left: 4px
   margin-right: 4px
 
 .hide
